stop horizontal scrolling

--- a/week_2 - december 22 - 29/styles.css
+++ b/week_2 - december 22 - 29/styles.css
@@ -7,6 +7,7 @@
 
 body {
   background-color: #1a181b;
+  max-width: 100%;
 }
 
 body:hover {
